--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -35,7 +35,7 @@
                <!-- Submit/Cancel Buttons -->
                <div id="name-group" class="form-group">
                   <div class="col-lg-2">
-                     <button type="submit" class="btn btn-primary btn-fab btn-raised mdi-content-add" ng-click="addMessage(message.content, currentUser.id)"></button>
+                     <button type="submit" class="btn btn-primary btn-fab btn-raised mdi-content-add" ng-click="addMessage({message: message.content, userId: currentUser.id})"></button>
                   </div>
                </div>
             </fieldset>
