--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,7 +27,7 @@
 
                <!-- Submit/Cancel Buttons -->
             <div id="name-group" class="form-group">
-                <div class="col-lg-12 col-lg-offset-2">
+                <div align="middle">
                     <button 
                             type="submit" 
                             class="btn btn-primary"
