--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,10 @@
 
 /* HOME */
 
+.fixed{
+	position: fixed;
+}
+
 /* ########################################################################################################## */
 
 /* SEETTINGS */
