--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 <div class="row">
-   <div class="col-md-4">
-      <div class="jumbotron">
+   <div class="col-md-4" >
+      <div class="jumbotron fixed">
          <div class="row featurette">
             <div class="col-md-4">
                <img class="featurette-image img-responsive img-thumbnail" ng-src="{{currentUser.picture}}" width="160px" height="160px">
