--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 <div class="row">
    <div class="col-md-4" >
-      <div class="jumbotron fixed">
+      <div class="jumbotron">
          <div class="row featurette">
             <div class="col-md-4">
                <img 
