--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="jumbotron col-md-10 col-md-offset-1">
         <h2>Change account settings</h2>
-        <p id="development">This section is under development!</p>
+        <p class="development">This section is under development!</p>
         <a href="#/" class="btn btn-primary btn-raised">Go back to home <i class="mdi-hardware-keyboard-arrow-right"></i></a>
     </div>
 </div>
