--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -36,7 +36,7 @@
                             ng-click="login()">Log in
                     </button>
                 </div>
-                <p>{{errorMessage}}</p>
+                <p class="login-error">{{errorMessage}}</p>
             </div>
             </fieldset>
          </form>
