--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -5,7 +5,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/"><i class="mdi-action-favorite-outline"></i> hello</a>
+        <a class="navbar-brand" href="#/">she <i class="mdi-action-favorite-outline"></i> he</a>
       </div>
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav nav-pills">
