--- a/app/templates/todo.html
+++ b/app/templates/todo.html
@@ -4,11 +4,19 @@
 
 <div class="row">
     <div class="jumbotron col-md-10 col-md-offset-1">
-        <h2>Next versions will include:</h2>
+        <h2>Future versions will include:</h2>
         <ul>
-            <li><p>Favorito</p></li>
-            <li><p>Soporte de fotos</p></li>
-            <li><p>Tags</p></li>
+            <li><p>Interface design improvement.</p></li>
+            <li><p>Pictures upload support.</p></li>
+            <li><p>New/Unread messages.</p></li>
+            <li><p>Real iOS & Andrroid app:</p>
+            	<ul>
+            		<li><p>Mobile optimized.</p></li>
+            		<li><p>Pop up notifications.</p></li>
+            		<li><p>Chat.</p></li>
+            	</ul>
+            </li>
+            <li><p>Account settings.</p></li>
         </ul>
     </div>
 </div>
