--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 /* GENERAL */
 body {
 	background-color: #CFD8DC !important	;
@@ -18,6 +19,7 @@ body {
 	background-color: #FFF2EB !important;
 }
 
+/* ########################################################################################################## */
 /* NAVBAR */
 
 .navbar {
@@ -37,6 +39,43 @@ background-color: #EF5350 !important;
 	background-color: #B22222 !important; 
 }
 
+/* ########################################################################################################## */
+/* STREAM */
+
+.post-content {
+
+}
+
+.username{
+	font-weight: 700 !important;
+	color: #464342 !important;
+	font-size: 99% !important;
+}
+
+/* ########################################################################################################## */
+/* HOME */
+
+.fixed{
+	position: fixed;
+}
+
+/* ########################################################################################################## */
+/* SEETTINGS */
+
+.development {
+	color: red;
+}
+
+/* ########################################################################################################## */
+/* FOOTER */
+
+.login-error {
+	color: red;
+	text-align: center;
+	font-weight: 700 !important;
+}
+
+/* ########################################################################################################## */
 /* FOOTER */
 
 .autor {
@@ -45,22 +84,6 @@ background-color: #EF5350 !important;
 }
 
 .autor:hover {
-	color: #004D40;
+	color: #B71C1C;
 	text-decoration: none;
-}
-
-/* ########################################################################################################## */
-
-/* HOME */
-
-.fixed{
-	position: fixed;
-}
-
-/* ########################################################################################################## */
-
-/* SEETTINGS */
-
-#development {
-	color: red;
 }
