Active class in navigation items

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,13 +9,13 @@
       </div>
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav nav-pills">
-          <li class="active"><a href="#/"><i class="mdi-action-home"></i> Home</a></li>
-          <li><a href="#/new"><i class="mdi-communication-live-help"></i> New <span class="badge">3</span></a></li>
+          <li ng-class="{active: isActive('app')}"><a href="#/"><i class="mdi-action-home"></i> Home</a></li>
+          <li ng-class="{active : isActive('new')}"><a href="#/new"><i class="mdi-communication-live-help"></i> New <span class="badge">3</span></a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#/todo"><i class="mdi-editor-border-color"></i> To do!</a></li>
-            <li><a href="#/settings"><i class="mdi-action-settings"></i></a></li>
+            <li ng-class="{active: isActive('todo')}"><a href="#/todo"><i class="mdi-editor-border-color"></i> To do!</a></li>
+            <li ng-class="{active: isActive('settings')}"><a href="#/settings"><i class="mdi-action-settings"></i></a></li>
             <li><button 
                               type="submit" 
                               class="btn btn-primary btn-fab btn-raised mdi-action-exit-to-app" 
